--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "react-dom": "^16.2.0"
   },
   "devDependencies": {
+    "@types/react": "^16.0.34",
+    "@types/react-dom": "^16.0.3",
+    "awesome-typescript-loader": "^3.4.1",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-plugin-transform-class-properties": "^6.24.1",
@@ -24,6 +27,8 @@
     "enzyme-adapter-react-16": "^1.1.1",
     "jest": "^22.0.6",
     "sinon": "^4.1.4",
+    "source-map-loader": "^0.2.3",
+    "typescript": "^2.6.2",
     "webpack": "^3.10.0",
     "webpack-dev-server": "^2.10.1"
   }
